--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,20 +11,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Input panjang"
-        />
+        android:text="Input panjang" />
     <EditText
         android:id="@+id/edt_length"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
-        android:lines="1"
-        />
+        android:lines="1" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Input lebar"
-        />
+        android:text="Input lebar" />
     <EditText
         android:id="@+id/edt_width"
         android:layout_width="match_parent"
@@ -34,8 +31,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Input tinggi"
-        />
+        android:text="Input tinggi" />
     <EditText
         android:id="@+id/edt_height"
         android:layout_width="match_parent"
@@ -57,5 +53,4 @@
         android:gravity="center"
         android:textSize="16sp"
         android:textStyle="bold" />
-
-/>
+</LinearLayout>
